# image-selector-tool

./: .gitignore  BUILD.md  README.md  需求文档.md
.github/workflows/: build-windows.yml  release.yml
image-selector/: README.md  package-lock.json  package.json  tailwind.config.js
image-selector/src/: App.css  App.tsx
image-selector/src-tauri/: Cargo.toml  tauri.conf.json
image-selector/src-tauri/src/: commands.rs  file_manager.rs  lib.rs  main.rs  types.rs
image-selector/src/components/: BatchProcessor.tsx  FolderSelector.tsx  ImageViewer.tsx  KeyboardHandler.tsx  MarkingStatus.tsx
image-selector/src/hooks/: useFileOperations.ts  useImageNavigation.ts  useKeyboardShortcuts.ts
image-selector/src/stores/: appStore.ts
image-selector/src/types/: index.ts
image-selector/src/utils/: tauriApi.ts
